--- a/Snapchat/Snapchat/Base.lproj/Main.storyboard
+++ b/Snapchat/Snapchat/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11761" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -115,6 +116,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="6n2-wG-yCR" id="K5t-ah-dZn"/>
+                        <segue destination="rqM-jW-J8D" kind="show" identifier="versnapsegue" id="0zK-84-7fI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zhl-Xv-HwK" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -236,6 +238,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="db7-KS-PBt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="823" y="49"/>
+        </scene>
+        <!--Ver Snap View Controller-->
+        <scene sceneID="na2-zq-2uo">
+            <objects>
+                <viewController id="rqM-jW-J8D" customClass="VerSnapViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VIs-hf-dE3"/>
+                        <viewControllerLayoutGuide type="bottom" id="DYs-69-vEe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MJO-h4-rua">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szt-5B-ZhG">
+                                <rect key="frame" x="21" y="636" width="333" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Tp-Ev-zRw">
+                                <rect key="frame" x="26" y="74" width="323" height="552"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Szt-5B-ZhG" firstAttribute="leading" secondItem="MJO-h4-rua" secondAttribute="leadingMargin" constant="5" id="91K-Gm-Q7i"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2Tp-Ev-zRw" secondAttribute="trailing" constant="10" id="Dtw-d6-pZE"/>
+                            <constraint firstItem="2Tp-Ev-zRw" firstAttribute="top" secondItem="VIs-hf-dE3" secondAttribute="bottom" constant="10" id="KNM-sO-fug"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Szt-5B-ZhG" secondAttribute="trailing" constant="5" id="KdH-MK-frb"/>
+                            <constraint firstItem="2Tp-Ev-zRw" firstAttribute="centerX" secondItem="MJO-h4-rua" secondAttribute="centerX" id="WL3-S0-hyz"/>
+                            <constraint firstItem="2Tp-Ev-zRw" firstAttribute="leading" secondItem="MJO-h4-rua" secondAttribute="leadingMargin" constant="10" id="a3n-Cb-fST"/>
+                            <constraint firstItem="Szt-5B-ZhG" firstAttribute="top" secondItem="2Tp-Ev-zRw" secondAttribute="bottom" constant="10" id="gPx-mu-kaX"/>
+                            <constraint firstItem="Szt-5B-ZhG" firstAttribute="centerX" secondItem="MJO-h4-rua" secondAttribute="centerX" id="pYt-m2-tp0"/>
+                            <constraint firstItem="DYs-69-vEe" firstAttribute="top" secondItem="Szt-5B-ZhG" secondAttribute="bottom" constant="10" id="woH-bS-RZR"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="2Tp-Ev-zRw" id="xrG-jE-JlF"/>
+                        <outlet property="label" destination="Szt-5B-ZhG" id="uAu-hc-J8r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uw5-cY-TGx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1529" y="752"/>
         </scene>
     </scenes>
 </document>
